--- a/resume.Rmd
+++ b/resume.Rmd
@@ -6,7 +6,7 @@ output:
   pagedown::html_resume:
     css: ['custom_resume.css', 'styles.css', 'resume']
     # set it to true for a self-contained HTML page but it'll take longer to render
-    self_contained: false
+    self_contained: true
 
 ---
 
