--- a/resume.Rmd
+++ b/resume.Rmd
@@ -4,7 +4,7 @@ author: Nick Strayer
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
-    css: ['custom_resume.css', 'styles.css', 'resume']
+    css: ['css/custom_resume.css', 'css/styles.css', 'resume']
     # set it to true for a self-contained HTML page but it'll take longer to render
     self_contained: true
 
@@ -122,7 +122,7 @@ Nick Strayer {#title}
 ```{r}
 intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
 
-Currently searching for a data science position that allows me build tools using visualization and machine learning to help people explore and understand their data. 
+Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
 "
 
 
@@ -135,7 +135,7 @@ Education {data-icon=graduation-cap data-concise=true}
 --------------------------------------------------------------------------------
 
 ```{r}
-print_section(position_data, 'education')
+position_data %>% print_section('education')
 ```
 
 
@@ -147,7 +147,7 @@ Selected Positions {data-icon=suitcase}
 position_data %>% print_section('positions')
 ```
 
-Selected Writing {data-icon=suitcase}
+Selected Writing {data-icon=newspaper}
 --------------------------------------------------------------------------------
 
 
