Simplified the skill bar printing.

--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,7 @@ library(glue)
 library(tidyverse)
 
 # Set this to true to have links turned into footnotes at the end of the document
-PDF_EXPORT <- TRUE
+PDF_EXPORT <- FALSE
 
 # Holds all the links that were inserted for placement at the end
 links <- c()
@@ -75,7 +75,6 @@ Language Skills {#skills}
 --------------------------------------------------------------------------------
 
 ```{r}
-out_of <- 5
 skills <- tribble(
   ~skill,               ~level,
   "R",                  5,
@@ -87,22 +86,7 @@ skills <- tribble(
   "AWK",                3
 )
 
-skill_bars_html <- skills %>% 
-  arrange(desc(level)) %>% 
-  mutate(percent_skill = glue("")) %>% 
-  glue_data(
-    "<div class = 'skill-bar'",
-    "style='width:{round(100*level/out_of)}%;'>",
-    "{skill}",
-    "</div>"
-  ) %>% 
-  paste(collapse = "\n")
-
-glue(
-  "<div class = 'skills-holder'>",
-  "{skill_bars_html}",
-  "</div>"
-)
+build_skill_bars(skills)
 ```
 
 
