Changed skills bars to use css linear gradient to encode values allowing for them to have a background.

--- a/resume.Rmd
+++ b/resume.Rmd
@@ -6,7 +6,7 @@ output:
   pagedown::html_resume:
     css: ['css/custom_resume.css', 'css/styles.css', 'resume']
     # set it to true for a self-contained HTML page but it'll take longer to render
-    self_contained: true
+    self_contained: false
 
 ---
 
@@ -78,7 +78,6 @@ skills <- tribble(
   "C++",                3,
   "AWK",                3
 )
-
 build_skill_bars(skills)
 ```
 
