Forgot to upload the latest resume with self-contained enabled.

--- a/resume.Rmd
+++ b/resume.Rmd
@@ -6,8 +6,7 @@ output:
   pagedown::html_resume:
     css: ['css/custom_resume.css', 'css/styles.css', 'resume']
     # set it to true for a self-contained HTML page but it'll take longer to render
-    self_contained: false
-
+    self_contained: true
 ---
 
 
