Extracted the common variables of the intro text and the skill bars to a separate R script where they can be built easily. This means no more forgetting to update one or the other.

--- a/index.Rmd
+++ b/index.Rmd
@@ -24,7 +24,8 @@ PDF_EXPORT <- FALSE
 # Holds all the links that are inserted for placement at the end
 links <- c()
 
-source('parsing_functions.R')
+source('parsing_functions.R') # Functions for building sections from CSV data
+source('common_variables.R')  # Small variables for non-csv data such as intro text
 
 # Load csv with position info
 position_data <- read_csv('positions.csv')
@@ -75,17 +76,6 @@ Language Skills {#skills}
 --------------------------------------------------------------------------------
 
 ```{r}
-skills <- tribble(
-  ~skill,               ~level,
-  "R",                  5,
-  "Javascript (d3.js)", 4.5,
-  "C++",                4,
-  "Python",             4,
-  "Bash",               3.5,
-  "SQL",                3,
-  "AWK",                3
-)
-
 build_skill_bars(skills)
 ```
 
@@ -113,11 +103,6 @@ Nick Strayer {#title}
 
 
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
-
-Currently searching for a position that allows me to build tools leveraging a combination of visualization, machine learning, and software engineering to help people explore and understand their data in new and useful ways. 
-"
-
 cat(sanitize_links(intro_text))
 ```
 
