--- a/index.Rmd
+++ b/index.Rmd
@@ -21,15 +21,57 @@ library(tidyverse)
 # Set this to true to have links turned into footnotes at the end of the document
 PDF_EXPORT <- FALSE
 
+# Where will the HTML version of CV be hosted?
+CV_HTML_LOC <- "nickstrayer.me/cv"
+CV_PDF_LOC <- "https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf"
+
 # Holds all the links that are inserted for placement at the end
 links <- c()
 
-source('parsing_functions.R') # Functions for building sections from CSV data
-source('common_variables.R')  # Small variables for non-csv data such as intro text
-
-# Load csv with position info
-position_data <- read_csv('positions.csv')
+# Functions for building sections from CSV data
+source('parsing_functions.R') 
 ```
+
+```{r load_data_googlesheets, eval=TRUE, include=FALSE}
+# =================================================================================
+# This code uses google sheets to store the position info
+library(googlesheets4)
+
+# Just the copied URL from the sheet
+positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc"
+
+sheet_is_publicly_readable <- TRUE
+
+if(sheet_is_publicly_readable){
+  # This tells google sheets to not try and authenticate. Note that this will only
+  # work if your sheet has sharing set to "anyone with link can view"
+  sheets_deauth()
+} else {
+  # My info is in a public sheet so there's no need to do authentication but if you want
+  # to use a private sheet, then this is the way you need to do it.
+  # designate project-specific cache so we can render Rmd without problems
+  options(gargle_oauth_cache = ".secrets")
+  
+  # Need to run this once before knitting to cache an authentication token
+  # googlesheets4::sheets_auth()
+}
+
+
+position_data <- read_sheet(positions_sheet_loc, sheet = "positions")
+skills        <- read_sheet(positions_sheet_loc, sheet = "language_skills")
+text_blocks   <- read_sheet(positions_sheet_loc, sheet = "text_blocks")
+contact_info  <- read_sheet(positions_sheet_loc, sheet = "contact_info", skip = 1)
+```
+
+```{r load_data_csvs, eval=FALSE, include=FALSE}
+# Want to go oldschool with just a csv?
+# Set eval=TRUE for this chunk and eval=FALSE for the chunk above 
+position_data <- read_csv("csvs/positions.csv")
+skills        <- read_csv("csvs/language_skills.csv")
+text_blocks   <- read_csv("csvs/text_blocks.csv")
+contact_info  <- read_csv("csvs/contact_info.csv", skip = 1)
+```
+
 
 
 ```{r}
@@ -54,21 +96,19 @@ Aside
 ```{r}
 # When in export mode the little dots are unaligned, so fix that. 
 if(PDF_EXPORT){
-  cat("View this CV online with links at _nickstrayer.me/cv_")
+  glue("View this CV online with links at _{CV_HTML_LOC}_")
 } else {
-  cat("[<i class='fas fa-download'></i> Download a PDF of this CV](https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf)")
+  glue("[<i class='fas fa-download'></i> Download a PDF of this CV]({CV_PDF_LOC})")
 }
 ```
 
 Contact {#contact}
 --------------------------------------------------------------------------------
 
-
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+```{r}
+contact_info %>% 
+  glue_data("- <i class='fa fa-{icon}'></i> {contact}")
+```
 
 
 
@@ -78,8 +118,6 @@ Language Skills {#skills}
 ```{r}
 build_skill_bars(skills)
 ```
-
-
 
 
 
@@ -94,16 +132,14 @@ Last updated on `r Sys.Date()`.
 
 
 
-
 Main
 ================================================================================
 
 Nick Strayer {#title}
 --------------------------------------------------------------------------------
 
-
 ```{r}
-cat(sanitize_links(intro_text))
+print_text_block(text_blocks, 'intro')
 ```
 
 
@@ -130,13 +166,16 @@ Industry Experience {data-icon=suitcase}
 --------------------------------------------------------------------------------
 
 ::: aside
-I have worked in a variety of roles ranging from journalist to software engineer to data scientist. I like collaborative environments where I can learn from my peers. 
+```{r}
+print_text_block(text_blocks, 'industy_experience_aside')
+```
 :::
 
 ```{r}
 print_section(position_data, 'industry_positions')
 ```
 
+<!-- These breaks just force a new page so section doesnt get cut off -->
 <br>
 <br>
 <br>
@@ -145,7 +184,9 @@ Teaching Experience {data-icon=chalkboard-teacher}
 --------------------------------------------------------------------------------
 
 ::: aside
-I am passionate about education. I believe that no topic is too complex if the teacher is empathetic and willing to think about new methods of approaching task. 
+```{r}
+print_text_block(text_blocks, 'teaching_experience_aside')
+```
 :::
 
 ```{r}
@@ -153,12 +194,14 @@ print_section(position_data, 'teaching_positions')
 ```
 
 
+
 Selected Data Science Writing {data-icon=chart-line}
 --------------------------------------------------------------------------------
 
-
 ::: aside
-I regularly blog about data science and visualization on my blog [LiveFreeOrDichotomize.](https://livefreeordichotomize.com/)
+```{r}
+print_text_block(text_blocks, 'data_science_writing_aside')
+```
 :::
 
 ```{r}
@@ -178,13 +221,13 @@ print_section(position_data, 'about_me_press')
 <br>
 <br>
 
+
 Selected Press (By)  {data-icon=newspaper}
 --------------------------------------------------------------------------------
 
 ```{r}
 print_section(position_data, 'by_me_press')
 ```
-
 
 
 
